# opengl_training

./: .gitignore  CMakeLists.txt  bam.lua
res/: sample.wld
shader/: fragment.glsl  vertex.glsl
src/: InputController.cpp  InputController.h  OpenGlTraining.cpp  OpenGlTraining.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  Renderer.cpp  Renderer.h  gl.cpp  gl.h  main.cpp  misc.h  opengl_training.cpp  opengl_training.h
